@@ -2,8 +2,8 @@
  *
  * CHECKS.C - Service and host check functions for Nagios
  *
- * Copyright (c) 1999-2006 Ethan Galstad (nagios@nagios.org)
- * Last Modified:   06-20-2006
+ * Copyright (c) 1999-2007 Ethan Galstad (nagios@nagios.org)
+ * Last Modified:   02-22-2006
  *
  * License:
  *
@@ -2098,8 +2098,9 @@ int check_host(host *hst, int propagation_options, int check_options){
 			if(sigrestart==TRUE || sigshutdown==TRUE){
 				hst->current_attempt=1;
 				hst->current_state=old_state;
-				free(hst->plugin_output);
-				hst->plugin_output=(char *)old_plugin_output;
+				if(hst->plugin_output!=NULL)
+					free(hst->plugin_output);
+				hst->plugin_output=(char *)strdup(old_plugin_output);
 				return hst->current_state;
 				}
 
@@ -2194,8 +2195,9 @@ int check_host(host *hst, int propagation_options, int check_options){
 			if(sigrestart==TRUE || sigshutdown==TRUE){
 				hst->current_attempt=1;
 				hst->current_state=old_state;
-				free(hst->plugin_output);
-				hst->plugin_output=(char *)old_plugin_output;
+				if(hst->plugin_output!=NULL)
+					free(hst->plugin_output);
+				hst->plugin_output=(char *)strdup(old_plugin_output);
 				return hst->current_state;
 				}
 
