@@ -8,6 +8,7 @@ Nagios 2.x Change Log
 * Bug fix for calculating notification interval with service escalations
 * Bug fix for using servicegroups in service dependency definitions
 * Bug fix for bad date format submission in command CGI
+* Possible segfault fix during restarts when daemon was performing host checks
 
 
 
